--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -33,9 +33,10 @@
           <hr class="subnav-top">
 
           <ul class="sub-nav pull-left">    
-            <li><%= link_to "OUR STORY", '#' %></li>
-            <li><%= link_to "OUR TEAM", '#' %></li>
+            <li><%= link_to "OUR MISSION", '#' %></li>
+            <li><%= link_to "OUR GIFT CRITERION", '#' %></li>
             <li class="<%= 'active' if current_page?(gift_brand_path) %>"><%= link_to "BRANDS WE LOVE", gift_brand_path %></li>
+            <li><%= link_to "FAQ", '#' %></li>
           </ul>
           
           <%= render partial: "layouts/subnav" %>
