--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,63 +1,48 @@
 <div class="container">
   
-    <div class="gray-font large-font qikki-font">Hi, we are <span style="font-size: 38px; color: #FF6F6A; font-family:'MountainsofChristmas'">Bubboli</span> 
-      and here is a little about us.</div>
-  
-  </br>
-  <h6 class="qikki-font">Who are you?</h6>
-  
-  We are godmothers and godfathers, aunties and uncles, 
-  friends and colleagues who can’t help but get a little bubbly inside when we think about the children in
-  our lives. These little ones came into our lives, left cute little footprints on our hearts and made us 
-  love them with just one smile.  We’ve been known to search every nook and cranny in order to find the 
-  best gifts on the market to spoil them <em>just</em> a little.
-
-  </br>
-  </br>
-
-  
-  
-
-
-      <span="span8">
-      But enough about us.  Let's talk about you. Life is demanding and we know whether you're an aunt, uncle, 
-      cousin, friend or just a big kid at heart, sometimes you just don't have the time or don't know where to 
-      start looking for the perfect gift. Here is where we come in. We do all the research and only present our
-      favorite products on our site. <span style="color: #FF6F6A"><em>Our ultimate goal is to make your life easier</em></span> and this is just the beginning.
-      Let us do the heavy lifting so you can spend more time with the ones that matter most.</span>
-
-      </br>
-      </br>
+    <div class="row">
+      <div class="span12">
+        <div class="section-header">
+          <div class="section-header-text">
+            <p>THE BUBBOLI<br> 
+            MISSION</p>
+          </div>    
+        </div>
       
-      <h6 class="qikki-font">Why are there so few gifts on the site?</h6>
-      
-      That's an excellent question. Because we only endorse the best products on the market, we have to be very selective with what we
-      show on the site. However, new products are always coming out and we are constantly adding and changing the list.
-      
-      </br>
-      </br>
-    <h6 class="qikki-font">How long have you been around?</h6>      
-  
-
-  <div class="span4 pull-right"><%= bubboli_team %></div>
-
-    Since February 2012.
-    Our company is still a baby, so please bear with us as we learn to crawl and take our 
-    first steps. We have a lot of great things planned for the months ahead and would love for you join us on 
-    our journey. Help us make Bubboli better or just drop us a note to say hi at <%= mail_to("contact@bubboli.com") %>.
-      
-    </br>
-    </br>  
-      
-    Also, check us out on Twitter at <%= link_to '@bubboli', "http://www.twitter.com/bubboli", :target => "_blank" %> 
-    or like us on <%= link_to 'Facebook', "http://www.facebook.com/bubboli", :target => "_blank" %>.
+      <%= render partial: "mission" %>
+      </div>
+    </div>
     
-    </br>
-    </br>
+    <br>
+    <br>
+    <br>
+    
+    <div class="row">
+      <div class="span12">
+        <div class="section-header">
+          <div class="section-header-text">
+            <p>GIFT<br> 
+            CRITERION</p>
+          </div>    
+        </div>
       
+      <%= render partial: "gift_criteria"%>
+      </div>
+    </div>
 
-  </div>
-  
-
-
+    <br>
+    <br>
+    <br>
+    
+    <div class="row">
+      <div class="span12">
+        <div class="section-header">
+          <div class="section-header-text">
+            <p>FAQ</p>
+          </div>    
+        </div>
+      <%= render partial: "faq"%>
+      </div>
+    </div>
+    
 </div>
