--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
         <li class="children-following child-list block">
           <%= render(:partial => 'child_list', :locals => {:r => r})%>
           <span style="color: #999999; font-size: 12px">Birthday: <%= r.child.birth_date.strftime("%b. %d")%></span>
-          <%= link_to "Unfollow", r, :method => :delete, :remote => "true", :class => "unfollow btn btn-mini btn-warning btn-spacing" %>
+          <%= link_to "Unfollow", r, :method => :delete, :data => {:confirm => "Are you sure you want to unfollow this child?"}, :remote => "true", :class => "unfollow btn btn-mini btn-warning btn-spacing" %>
         <% else %>
         <% end %>        
       <% end %>
@@ -63,7 +63,7 @@
         <li class="children-following child-list block">
           <%= render(:partial => 'child_list', :locals => {:r => r})%>
           <span style="color: #999999; font-size: 12px">Relations: <%= r.relation_type.name if r.relation_type %></span><br>
-          <%= link_to "Unfollow", r, :method => :delete, :remote => "true", :class => "unfollow btn btn-mini btn-warning btn-spacing" %>          
+          <%= link_to "Unfollow", r, :method => :delete, :data => {:confirm => "Are you sure you want to unfollow this child?"}, :remote => "true", :class => "unfollow btn btn-mini btn-warning btn-spacing" %>          
         </li>  
         <% end %>
       </ul>
