--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -21,6 +21,7 @@
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
+    
 
   </script>
   
@@ -29,14 +30,14 @@
 <div class="wrapper">    
 <%= render partial: "layouts/header" %> 
          
-        <div class="container">
+        <div class="container" id="subnav">
           <hr class="subnav-top">
 
           <ul class="sub-nav pull-left">    
-            <li><%= link_to "OUR MISSION", '#' %></li>
-            <li><%= link_to "OUR GIFT CRITERION", '#' %></li>
+            <li><%= link_to "OUR MISSION", about_path(:anchor => 'our_mission') %></li>
+            <li><%= link_to "OUR GIFT CRITERION", about_path(:anchor => 'gift_criterion') %></li>
             <li class="<%= 'active' if current_page?(gift_brand_path) %>"><%= link_to "BRANDS WE LOVE", gift_brand_path %></li>
-            <li><%= link_to "FAQ", '#' %></li>
+            <li><%= link_to "FAQ", about_path(:anchor => 'faq') %></li>
           </ul>
           
           <%= render partial: "layouts/subnav" %>
