--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
-  
     <div class="row">
       <div class="span12">
-        <div class="section-header">
+        <div class="section-header" id="our_mission">
           <div class="section-header-text">
             <p>THE BUBBOLI<br> 
             MISSION</p>
@@ -19,7 +18,7 @@
     
     <div class="row">
       <div class="span12">
-        <div class="section-header">
+        <div class="section-header" id="gift_criterion">
           <div class="section-header-text">
             <p>GIFT<br> 
             CRITERION</p>
@@ -36,7 +35,7 @@
     
     <div class="row">
       <div class="span12">
-        <div class="section-header">
+        <div class="section-header" id="faq">
           <div class="section-header-text">
             <p>FAQ</p>
           </div>    
@@ -44,5 +43,5 @@
       <%= render partial: "faq"%>
       </div>
     </div>
-    
+
 </div>
