added anchor tags to about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,7 @@ $bubboli-yellow:      #FEFCE6;
 $teal-green:          #63CECA;
 $teal-green2:         #2EAF9D;
 $teal-green3:         #5FC5C1;
-$bubboli-green:       #6fae4d;
+$bubboli-green:       #6FAE4D;
 
 @import 'bootstrap';
 
@@ -300,7 +300,7 @@ hr.profile {
   }  
 
 a {
-  color: $dark-green-blue;
+  color: $teal-green;
   }
 
 .pending_link a {
