--- a/app/views/pages/_faq.html.erb
+++ b/app/views/pages/_faq.html.erb
@@ -16,7 +16,7 @@
       <p>We are godmothers and godfathers, aunties and uncles, 
       friends and colleagues who can’t help but get a little bubbly inside when we think about the children in
       our lives. These little ones came into our lives, left cute little footprints on our hearts and made us 
-      love them with just one smile.  We’ve been known to search every nook and cranny in order to find the 
+      love them with just one "koo".  We’ve been known to search every nook and cranny in order to find the 
       best gifts on the market to spoil them <em>just</em> a little.
       </p>
     </li>
@@ -24,7 +24,7 @@
     <li>
       <strong>Why are there so few gifts on the site?</strong>
       <p>That's an excellent question. Because we only endorse the best products on the market, we have to be very selective with what we
-      show on the site. However, new products are always coming out and we are constantly adding and changing the list.</p>
+      show on the site. However, we are constantly reviewing more toys and are constantly adding and changing the list of recommended gifts.</p>
     </li>
 
     <li>
@@ -37,8 +37,8 @@
 
     <li>
       <strong>How do you choose your gifts?</strong>
-      <p>Your bubs are important to you so we know you only want the best for them.  That is why we have a very strict criteria for 
-        selecting the toys the recommend.  Please click here for a more detailed outline of our selection process.</p>
+      <p>Your bubs are important to you so we know you only want the best for them.  That is why we have a very <%= link_to "strict criteria", about_path(:anchor => 'gif_criterion') %> 
+        for selecting the toys the recommend.  We will never recommend something we don't stand behind 100%.</p>
     </li>
 
     <li>
@@ -53,7 +53,7 @@
         the bubs in their lives. Bubboli helps the gifter choose a gift based on their specific preferences for each child so the gifts 
         are a reflection of the gifter as well as the child.<br><br> 
 
-      Additionally, the gifter can see the recent list of toys the bub received as gifts from other gifters and a list of recently 
+      Additionally, the gifter can see the recent list of toys the bub received from other gifters and a list of recently 
       purchased toys by the parents throughout the year so you can get an idea of what they are interested in and avoid duplicate gifts.<br><br> 
 
       Giving and receiving birthday gifts are fun and exciting and we’d like to keep that element of surprise for the child.</p>
@@ -61,18 +61,15 @@
 
     <li>
       <strong>Why does the “Buy Me” link take me to a different site?</strong>
-      <p>Bubboli does not warehouse any of the gifts recommend. We find gifts that meet our strict criteria then search online for the 
-        best price and shipping costs.<br><br>  
-
-      Bubboli is focused on making it easier for aunts / uncles / cousins / friends who wants to send their bubbie a birthday present 
-      but live far away so we do not warehouse any of our products.</p>
+      <p>Bubboli does not warehouse any of the gifts recommend. We find gifts that meet our strict criteria.  We believe this gives us uninhibited
+        freedom to choose only the best gifts eliminating any bias towards what we already have in inventory.<br><br></p>
     </li>
 
     <li>
       <strong>Why should I use Bubboli?</strong>
       <p>Life is demanding and we know whether you're an aunt, uncle, 
       cousin, friend or just a big kid at heart, sometimes you just don't have the time or don't know where to 
-      start looking for the perfect gift. Here is where we come in. We do all the research and only present our
+      start looking for the perfect gift. That is where we come in. We do all the research and only present our
       favorite products on our site. <span style="color: #FF6F6A"><em>Our ultimate goal is to make your life easier</em></span> and this is just the beginning.
       Let us do the heavy lifting so you can spend more time with the ones that matter most.</span></p>
     </li>
