--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,8 @@
       
       <div class="span5">
         <br>
-        <p style="font-size: 17px; text-align: center">Bubboli helps you keep track of
-        <span style="font-size: 17px; color: #FF9B97">birthdays and curated gift recommendations</span>
+        <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of
+        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and curated gift recommendations</span>
         for the special bubbies in your life</span></p>
         <br>
               
