--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,9 +9,9 @@
       
       <div class="span5">
         <br>
-        <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of
-        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and curated gift recommendations</span>
-        for the special bubbies in your life</span></p>
+        <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of childrens'
+        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and curated gift recommendations
+        from our trusted community</span> for the special bubbies in your life</span></p>
         <br>
               
         <br>
