--- a/app/views/pages/home2.html.erb
+++ b/app/views/pages/home2.html.erb
@@ -1,59 +1,185 @@
 <div class="container">
-    <div class="row index-background">
-      <div class="row" style="padding-left: 40px; text-align: center">
-        <p style="font-size: 30px; text-align: center; ">BE PREPARED FOR HUGS AND KISSES!</p>
+  <div class="index-background">  
+    <div class="row">
+      <div style="padding-left: 40px">  
+        <span style="font-size: 20px; text-align: center; font-family: 'futura-pt-condensed';">CURATED BIRTHDAY GIFTS FOR KIDS AT YOUR FINGERTIPS!</span>
+        <br>
         <br>
       </div>
-
-        <p style="font-size: 17px; text-align: center">Bubboli helps you keep track of
-        <span style="font-size: 17px; color: #FF9B97">birthdays and curated gift recommendations</span>
-        for the special bubbies in your life</span></p>
-        <br>
-        
-        <div style="text-align: center"><iframe width="560" height="315" src="http://www.youtube.com/embed/a7-K1rfFtE8" frameborder="0" allowfullscreen></iframe></div>
       
-    </div>
-
-    <ul>
-      <li>Never be late with a birthday present</li>
-      <li>Personalized gifts based on your preferences</li>
-      <li>Curated gifts from our community of parents, teachers, child development specialists, and kids themselves</li>
-    </ul>
+      <div class="span5">
+        <br>
+        <p style="font-size: 17px; text-align: center; ">Bubboli helps you keep track of childrens'
+        <span style="font-size: 17px; color: #FFFFFF; background-color: #FF9B97; padding: 5px;">birthdays and sends you curated gift recommendations
+        from our trusted community</span> for the special bubbies in your life</span></p>
+        <br>
+              
+        <br>
+        <div style="text-align: center">
+        <%= link_to "SIGN UP NOW", new_user_path, :class => "btn btn-large green" %>
+        </div>
+      </div>
     
+      <div class="explainer-video pull-right">
+        <iframe width="450" height="253" src="http://www.youtube.com/embed/a7-K1rfFtE8" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>  
     <br>
-    <%= link_to "Sign Up Now For Free", new_user_path, :class => "btn btn-success" %>
-
-
+    
+  <div>
+    
+    <h2 style="text-align: center; font-size: 17px; color: #9092A2;">You Really Do Love Us <em>*blush*</em></h2><br>
+    
     <div class="row">
       <div class="span4">
-        <strong>Why use Bubboli?<strong><br><br>
-          <ul>
-            <li>Never be late with a birthday present again</li>
-            <li>Personalized gifts based on your preferences</li>
-            <li>Curated gifts from our community of parents, teachers, child development specialists, and kids themselves</li>
-          </ul>
+        <p class="quotes">
+          I was looking for a baby shower gift and turned to my facebook friends for advice.  One of them recommended Bubboli where
+          I found the baby keepsake.  I am soooooo pleased with the purchase.  My friend loved it! 
+          <br>
+          <small><span class="pull-right">- Amy, New York</span></small>
+        </p>
       </div>
       
       <div class="span4">
-        <strong>Why use Bubboli?<strong><br><br>
-          <ul>
-            <li>So many options, you don't know what to get</li>
-            <li>You are busy conquering the world</li>
-            <li>You live far away</li>
-          </ul>
-      </div>
+        <p class="quotes">
+        Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride the bike. Thanks bubboli!   
+        <br>
+        <small><span class="pull-right">- Nancy, Rhode Island</span></small>
+        </p>
+      </div>  
       
       <div class="span4">
-        <strong>Who uses Bubboli?<strong><br><br>
-          <ul>
-            <li>Aunts and uncles</li>
-            <li>Grandparents and godparents</li>
-            <li>Family friends</li>
-            <li>You!</li>
-          </ul>
-      </div>
+        <p class="quotes">
+        I was so excited when I received the Deluxe Baby Keepsake Kit from my sister after the birth of my first child.  Such an amazing way
+        to capture their little hands and feet.  I am definitely getting this for my girlfriends when they have babies.
+        <br>
+        <small><span class="pull-right">- Ann-Marie, New Jersey</span></small>        
+        </p>
+      </div>          
+    </div>
       
+  </div>  
+  
+  <br>
+  <br>
+    
+  <div class="row">
+    <div class="span12">
+      <div class="section-header">
+        <div class="section-header-text">
+          <p>WHY USE<br> 
+          BUBBOLI?</p>
+        </div>    
+      </div>
+      <div class="row">
+        <div class="span4">
+          <div class="index-h3">CURATED FROM OUR COMMUNITY</div>
+          <p class="index-p">of parents, teachers, child development specialists, and kids themselves</p>
+        </div>
+      
+        <div class="span4">
+          <div class="index-h3">PERSONALIZED GIFTS</div>
+          <p class="index-p">based on your preferences for each child</p>
+        </div>
+      
+        <div class="span4">
+          <div class="index-h3">ALWAYS ON TIME</div>
+          <p class="index-p">we remind you in advance so you are never late with a present again</p>
+        </div>
+       </div> 
+       <br>
+       <div class="row">
+         <div class="span4">
+           <div class="index-h3">WAY TOO MANY OPTIONS</div>
+           <p class="index-p">that you don't know what to get or what kids are into these days</p>
+         </div>
+
+         <div class="span4">
+           <div class="index-h3">TOO BUSY CONQUERING THE WORLD</div>
+           <p class="index-p">so why not let us help you take the weight off this one</p>
+         </div>
+
+         <div class="span4">
+           <div class="index-h3">BUBBOLI IS FOR EVERYONE</div>
+           <p class="index-p">no matter if you are an aunt, uncle, grandparent, godparent or friend around the corner or miles away</p>
+         </div>
+        </div> 
+       
+
+     </div>
+  </div>
+  
+    
+    
+  <div class="row-fluid">
+    <div class="section-header">
+      <div class="section-header-text">
+        <p>HOW DOES<br> 
+        IT WORK?</p>
+      </div>
     </div>
     
+    <div class="how-it-works">  
+      <div class="row how-it-works-title">
+        <div class="span6">
+          <h2>GIFTERS</h2>
+        </div>
 
-</div>
+        <div class="span6">
+          <h2>PARENTS</h2>
+        </div>
+      </div>
+
+      <br>
+      <div class="row-fluid">
+        <div class="span6">
+          <p><%=  add_a_child  %> <br>1) Add the children you want to follow</p>
+        </div>
+
+        <div class="span6">
+          <p><%=  add_a_child  %> <br>1) Add your children</p>
+        </div>
+      </div>
+      <br>
+    
+      <div class="row-fluid">
+        <div class="span6">
+          <p><%=  send_recommendation  %> <br>2) We remind you of upcoming birthdays with a list of personalized gifts based on your preferences</p>
+        </div>
+
+        <div class="span6">
+          <p><%=  get_gifts  %> <br>2) Keep track of gifts purchased for your children</p>
+        </div>
+      </div>  
+      <br>
+    
+      <div class="row-fluid">
+        <div class="span6">
+          <p><%=  hugs_and_kisses  %> <br>3) Get loved, hugged and kissed</p>
+        </div>
+
+        <div class="span6">
+          <p><%=  get_organized  %> <br>3) Be organized and avoid receiving duplicate gifts</p>
+        </div>
+      </div>  
+      <br>
+      
+      <div class="row-fluid">
+        <div class="span6">
+          <br>
+          <br>
+          <%= link_to "SIGN UP NOW", new_user_path, :class => 'btn btn-large green' %>
+        </div>
+
+        <div class="span6">
+          <br>
+          <br>
+          <%= link_to "SIGN UP NOW", new_user_path, :class => 'btn btn-large green' %>
+        </div>
+      </div>  
+
+    </div>
+  </div>
+    <br>
+</div>  
