added trusted by users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -240,7 +240,7 @@ p {
   }
 
 hr {
-  border-bottom: 1px dashed $background-blue;
+  border-bottom: 1px solid $lightest-gray;
   margin-top: 2px
   } 
 
