--- a/app/views/pages/home2.html.erb
+++ b/app/views/pages/home2.html.erb
@@ -28,14 +28,15 @@
     <br>
     
   <div>
-    
-    <h2 style="text-align: center; font-size: 17px; color: #9092A2;">You Really Do Love Us <em>*blush*</em></h2><br>
-    
+    <hr>
     <div class="row">
+    <h2 style="text-align: center; font-size: 17px; color: #9092A2;">BUBBOLI IS TRUSTED BY OUR USERS</h2><br>
+    
+    
       <div class="span4">
         <p class="quotes">
-          I was looking for a baby shower gift and turned to my facebook friends for advice.  One of them recommended Bubboli where
-          I found the baby keepsake.  I am soooooo pleased with the purchase.  My friend loved it! 
+          "I was looking for a baby shower gift and turned to my facebook friends for advice.  One of them recommended Bubboli where
+          I found the baby keepsake.  I am soooooo pleased with the purchase.  My friend loved it!" 
           <br>
           <small><span class="pull-right">- Amy, New York</span></small>
         </p>
@@ -43,7 +44,7 @@
       
       <div class="span4">
         <p class="quotes">
-        Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride the bike. Thanks bubboli!   
+        "Bubboli made me the favorite aunt with the Strider bike. I can't wait to see my nephew ride the bike. Thanks bubboli!"   
         <br>
         <small><span class="pull-right">- Nancy, Rhode Island</span></small>
         </p>
@@ -51,14 +52,14 @@
       
       <div class="span4">
         <p class="quotes">
-        I was so excited when I received the Deluxe Baby Keepsake Kit from my sister after the birth of my first child.  Such an amazing way
-        to capture their little hands and feet.  I am definitely getting this for my girlfriends when they have babies.
+        "I was so excited when I received the Deluxe Baby Keepsake Kit from my sister after the birth of my first child.  Such an amazing way
+        to capture their little hands and feet.  I am definitely getting this for my girlfriends when they have babies."
         <br>
         <small><span class="pull-right">- Ann-Marie, New Jersey</span></small>        
         </p>
       </div>          
     </div>
-      
+    <hr>  
   </div>  
   
   <br>
