--- a/app/views/pages/gift_recommendation.html.erb
+++ b/app/views/pages/gift_recommendation.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
-        <!-- This is a simple example template that you can edit to create your own custom templates -->
+        <!-- Bubboli Gift Recommendation Email Template -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Facebook sharing information tags -->
         <meta property="og:title" content="*|MC:SUBJECT|*">
@@ -27,7 +27,7 @@
                         	<tr>
                           	<td valign="top">
                               <div mc:edit="std_preheader_content" style="color: #505050; font-family: Arial; font-size: 10px; line-height: 100%; text-align: left">
-                                	Use one or two sentences in this area to offer a teaser of your email's content. Text here will show in a preview area in some email clients.
+                                	This email was sent to you because you requested Bubboli to send you curated gift recommendations for <%= @child.first_name %>.
                               </div>
                             </td>
                             <td valign="top" width="180">
