management of reminder options from admin panel

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -9,6 +9,7 @@
     <li><%= link_to "Manage Gift Age Ranges", list_gift_age_range_path %></li>
     <li><%= link_to "Manage Gift Price Ranges", list_gift_price_range_path %></li>
     <li><%= link_to "Manage Relationship Types", list_relation_types_path %></li>
+    <li><%= link_to "Manage Birthday Reminder Options", list_reminder_options_path %></li>
   </div>
 
 </div>
