--- a/app/views/pages/friend_alert.html.erb
+++ b/app/views/pages/friend_alert.html.erb
@@ -94,22 +94,63 @@
                 <tr>
                   <td>    
                     <!-- // Begin Template Body \\ -->
-                      <table border="0" cellpadding="20" cellspacing="0" width="100%">
+                      <table border="0" cellpadding="8" cellspacing="0" width="100%">
                         <tr>
                           <td valign="top" style="border-collapse: collapse">
                           <div style="color:#505050; font-family: Arial; font-size: 14px; line-height: 100%; padding: 0; text-align: left;">
                             <!-- // Begin Module: Standard Welcome \\ -->
-                          	  <span style="color:505050; font-size: 14px; line-height:150%; font-weight:bold;"><h4>Hi <%= @parent.first_name %>,</h4></span> <br><br>
-                          	  <p><%= @user.first_name %> wants to be reminded of <%= @child.first_name %>'s birthday.</p>  
-                          	  <p>Help <%= @user.first_name %> avoid duplicate gifting by <a href="http://www.bubboli.com" style="color:#ff6f6a;
+                          	  <br><br>
+                          	  <span style="color:#707070; font-size: 16px; line-height:150%; font-weight:bold;">Hi <%= @parent.first_name %>,</span> <br><br>
+                          	  <br>
+                          	  
+                          	  <tr>
+                          	  <td style="color:#707070; font-size: 15px; line-height:150%;"><%= @user.first_name %> wants to be reminded of <%= @child.first_name %>'s birthday.</td>  
+                          	  </tr>
+                          	  
+                          	  <tr>
+                          	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help <%= @user.first_name %> avoid duplicate gifting by <a href="http://www.bubboli.com" style="color:#ff6f6a;
                               font-weight:normal;text-decoration:none" target="_blank">accepting </a> the friendship so they can see what's already been purchased
-                              for <%= @child.first_name %>.</p>
+                              for <%= @child.first_name %>.</td>
+                              </tr>
                           	<!-- // End Module: Standard Welcome \\ -->
                           </div>
                           </td>
                         </tr>
                       </table>  
-                            
+                           
+                           
+                            <!-- // Begin Module: Friend Alert \\ -->
+                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+                              <tr>
+                                
+                                <!-- // Begin Module: Friend Alert \\ -->
+                                <td valign="top" style="border-collapse: collapse">
+                                  <%= image_tag @user.image_url(:thumb) %>
+                                </td>
+                                <td>  
+                                  <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
+                                    <table>
+                                      <tr>
+                                        <td style="color: #53868b; display: block; font-family: Arial; font-size: 20px; font-weight: normal;
+                                        line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
+                                          <%= @user.first_name %>
+                                        </td>
+                                      </tr>
+                                    
+                                      <tr>
+                                        <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; font-size:15px;">                                      
+                                          <a href="http://www.bubboli.com" target="_blank" style="color: #FFFFFF"><span style="color: #FFFFFF;">ACCEPT FRIEND</span></a>                                      
+                                        </td>
+                                      </tr>
+                                    </table>
+                                      
+                                  </div>
+                                </td>
+                                <!-- // End Module: Friend Alert \\ -->
+                                
+                              </tr>
+                            </table>  
+                            <!-- // End Module: Friend Alert \\ -->
                           
                             
                             <!-- // Begin Module: Footer \\ -->
