fixed formatting for email for gift recommendation email

--- a/app/views/pages/gift_recommendation.html.erb
+++ b/app/views/pages/gift_recommendation.html.erb
@@ -117,10 +117,10 @@
                                   <%= image_tag @gifts[0].gift_images.first.image_url(:thumb_pic) if @gifts[0] %>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[0].name if @gifts[0] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[0].description.truncate(100) if @gifts[0] %>This is what a <a href="http://www.bubboli.com" style="color:#ff6f6a;
                                     font-weight:normal;text-decoration:none" target="_blank">link </a>looks like.  
                                   </div>
@@ -132,10 +132,10 @@
                                   <%= image_tag @gifts[1].gift_images.first.image_url(:thumb_pic) if @gifts[1] %>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[1].name if @gifts[1] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[1].description.truncate(100) if @gifts[1] %>. This is what a <a href="http://www.bubboli.com" style="color:#ff6f6a;
                                     font-weight:normal;text-decoration:none" target="_blank">link </a>looks like.  
                                   </div>
@@ -147,10 +147,10 @@
                                   <%= image_tag @gifts[2].gift_images.first.image_url(:thumb_pic) if @gifts[2] %>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[2].name if @gifts[2] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[2].description.truncate(100) if @gifts[2] %>  
                                   </div>
                                 </td>
@@ -164,10 +164,10 @@
                                   <%= image_tag @gifts[3].gift_images.first.image_url(:thumb_pic) if @gifts[3]%>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[3].name if @gifts[3] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[3].description.truncate(100) if @gifts[3] %>  
                                   </div>
                                 </td>
@@ -178,10 +178,10 @@
                                   <%= image_tag @gifts[4].gift_images.first.image_url(:thumb_pic) if @gifts[4] %>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[4].name if @gifts[4] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[4].description.truncate(100) if @gifts[4] %>  
                                   </div>
                                 </td>
@@ -192,10 +192,10 @@
                                   <%= image_tag @gifts[5].gift_images.first.image_url(:thumb_pic) if @gifts[5] %>
                                   
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
-                                    <h4 style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
+                                    <span style="color: #53868b; display: block; font-family: Arial; font-size: 14px; font-weight: bold;
                                     line-height: 100%; margin-top: 0; margin-right: 0; margin-bottom: 10px; margin-left: 0; text-align: center">
                                       <%= @gifts[5].name if @gifts[5] %>
-                                    </h4>
+                                    </span>
                                     <%= @gifts[5].description.truncate(100) if @gifts[5] %>  
                                   </div>
                                 </td>
