resized photos for show relationship page for gift images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -826,6 +826,7 @@ ul.child-list {
 li.children-following img, li.recommended-gifts img, li.add_to_purchased_gifts img {
   border: solid 1px #ccc;
   height: 90px;
+  width: 90px;
   float: left;
   padding: 4px;
   margin: 3px 1px 3px 1px
