added link to change password

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,7 @@
       <%= f.input :address_city, :label => "City", :input_html => { :class => "input-xlarge" } %>
       <%= f.input :address_state, :label => "State", :input_html => { :class => "input-xlarge" } %>
       <%= f.input :address_zip, :label => "Zip Code", :input_html => { :class => "input-xlarge" } %>
+      <%= link_to "Change Password", change_password_path %>
     </div>
     
   </div>
